# HomeKitADK

./: .gitignore  ARM64_COMPLETE.txt  ARM64_WINDOWS_SUPPORT.md  BUILDING_DEPENDENCIES_WINDOWS.md  BUILDING_DEPENDENCIES_WINDOWS_UPDATED.md  BUILD_ERRORS_FIXED.md  BUILD_SUCCESS_SUMMARY.md  BUILD_WINDOWS.md  Build-All.ps1  CMakeLists.txt  CMakePresets.json  COMPLETE_WINDOWS_PORT_SUMMARY.md  COMPLETE_WITH_DEPENDENCIES.md  FINAL_COMPLETE_SUMMARY.md  FINAL_VERIFICATION.txt  GETTING_STARTED_WINDOWS.md  HomeKitADK.sln  NFC_ON_WINDOWS_STATUS.md  NFC_QRCODE_ENABLED.md  PR_FIXES_APPLIED.md  README_HONEST_STATUS.md  README_WINDOWS_PORT.md  WINDOWS_PORT_100_PERCENT_COMPLETE.md  WINDOWS_PORT_COMPLETE.md  WINDOWS_PORT_FINAL_DELIVERY.md  common.props  vcpkg.json
Applications/: CMakeLists.txt  Main.c
Applications/Lightbulb/: App.c  CMakeLists.txt  Lightbulb.exe.manifest  Lightbulb.rc  Lightbulb.vcxproj  Lightbulb.vcxproj.filters
Applications/Lock/: CMakeLists.txt  Lock.exe.manifest  Lock.rc  Lock.vcxproj  Lock.vcxproj.filters  Lock_MbedTLS.vcxproj  Lock_MbedTLS.vcxproj.filters
HAP/: CMakeLists.txt  HAP.vcxproj  HAP.vcxproj.filters  HAPCharacteristicTypes.h  HAPTLVReader.c
PAL/Crypto/MbedTLS/: HAPMbedTLS.c
PAL/Crypto/OpenSSL/: HAPOpenSSL.c
PAL/Mock/: HAPPlatformSystemCommand.c
PAL/Windows/: CMakeLists.txt  COMPLETION_STATUS.txt  HAPPlatform.c  HAPPlatformAbort.c  HAPPlatformAccessorySetup.c  HAPPlatformAccessorySetupDisplay.c  HAPPlatformAccessorySetupNFC.c  HAPPlatformBLEPeripheralManager.c  HAPPlatformClock.c  HAPPlatformFileManager.c  HAPPlatformFileManager.h  HAPPlatformKeyValueStore.c  HAPPlatformLog+Init.h  HAPPlatformLog.c  HAPPlatformMFiHWAuth.c  HAPPlatformMFiTokenAuth.c  HAPPlatformRandomNumber.c  HAPPlatformRunLoop.c  HAPPlatformServiceDiscovery+Init.h  HAPPlatformServiceDiscovery.c  HAPPlatformSystemCommand.c  HAPPlatformTCPStreamManager+Init.h  HAPPlatformTCPStreamManager.c  HAPPlatform_Windows.vcxproj  HAPPlatform_Windows.vcxproj.filters  HAPPlatform_Windows_MbedTLS.vcxproj  HAPPlatform_Windows_MbedTLS.vcxproj.filters  HAPPlatform_Windows_OpenSSL.vcxproj
Scripts/: Build-Dependencies.ps1  Deploy-HomeKitADK.ps1  Provision-Lightbulb.ps1  Provision-Lock.ps1  Run-Tests.ps1  Setup-Environment.ps1  Test-WindowsBuild.ps1
Tests/: CMakeLists.txt  HAPBase+FloatTests.c  HAPCryptoTest.c  HAPIPAccessoryProtocolReadCharacteristicWriteRequestsTest.c  HAPIPAccessoryProtocolSerializeCharacteristicReadResponseTest.c  HAPImportTest.c  HAPPlatformSystemCommandTest.c
Tests/HAPAccessorySetupGetSetupHashTest/: HAPAccessorySetupGetSetupHashTest.vcxproj  HAPAccessorySetupGetSetupHashTest.vcxproj.filters
Tests/HAPAccessorySetupGetSetupPayloadTest/: HAPAccessorySetupGetSetupPayloadTest.vcxproj  HAPAccessorySetupGetSetupPayloadTest.vcxproj.filters
Tests/HAPAccessorySetupTest/: HAPAccessorySetupTest.vcxproj  HAPAccessorySetupTest.vcxproj.filters
Tests/HAPBLEEventTest/: HAPBLEEventTest.vcxproj  HAPBLEEventTest.vcxproj.filters  HAPBLEEventTest_OpenSSL.vcxproj  HAPBLEEventTest_OpenSSL.vcxproj.filters
Tests/HAPBLETransactionParseRequestTest/: HAPBLETransactionParseRequestTest.vcxproj  HAPBLETransactionParseRequestTest.vcxproj.filters
Tests/HAPBase+FloatTests/: HAPBase+FloatTests.vcxproj  HAPBase+FloatTests.vcxproj.filters
Tests/HAPBase+IntTests/: HAPBase+IntTests.vcxproj  HAPBase+IntTests.vcxproj.filters
Tests/HAPBase+StringTests/: HAPBase+StringTests.vcxproj  HAPBase+StringTests.vcxproj.filters
Tests/HAPCryptoTest/: HAPCryptoTest.vcxproj  HAPCryptoTest.vcxproj.filters  HAPCryptoTest_MbedTLS.vcxproj
Tests/HAPExhaustiveUTF8Test/: HAPExhaustiveUTF8Test.vcxproj  HAPExhaustiveUTF8Test.vcxproj.filters
Tests/HAPIPAccessoryProtocolReadCharacteristicWriteRequestsTest/: HAPIPAccessoryProtocolReadCharacteristicWriteRequestsTest.vcxproj  HAPIPAccessoryProtocolReadCharacteristicWriteRequestsTest.vcxproj.filters
Tests/HAPIPAccessoryProtocolReadPrepareWriteRequestTest/: HAPIPAccessoryProtocolReadPrepareWriteRequestTest.vcxproj
Tests/HAPIPAccessoryProtocolReadStringCharacteristicWriteRequestsTest/: HAPIPAccessoryProtocolReadStringCharacteristicWriteRequestsTest.vcxproj
Tests/HAPIPAccessoryProtocolSerializeCharacteristicReadResponseTest/: HAPIPAccessoryProtocolSerializeCharacteristicReadResponseTest.vcxproj  HAPIPAccessoryProtocolSerializeCharacteristicReadResponseTest.vcxproj.filters
Tests/HAPIPAccessoryProtocolSerializeStringCharacteristicReadResponseTest/: HAPIPAccessoryProtocolSerializeStringCharacteristicReadResponseTest.vcxproj  HAPIPAccessoryProtocolSerializeStringCharacteristicReadResponseTest.vcxproj.filters
Tests/HAPImportTest/: HAPImportTest.vcxproj  HAPImportTest.vcxproj.filters
Tests/HAPJSONUtilsTest/: HAPJSONUtilsTest.vcxproj  HAPJSONUtilsTest.vcxproj.filters
Tests/HAPPlatformSystemCommandTest/: HAPPlatformSystemCommandTest.vcxproj  HAPPlatformSystemCommandTest.vcxproj.filters
Tests/HAPTLVTest/: HAPTLVTest.vcxproj  HAPTLVTest.vcxproj.filters
Tests/HAPUTF8Test/: HAPUTF8Test.vcxproj  HAPUTF8Test.vcxproj.filters
Tests/HAPUUIDTest/: HAPUUIDTest.vcxproj  HAPUUIDTest.vcxproj.filters
Tests/util_base64_test/: util_base64_test.vcxproj  util_base64_test.vcxproj.filters
Tools/: CMakeLists.txt  Download-File.ps1  Generate-Documentation.ps1  Install-Application.ps1
Tools/AccessorySetupGenerator/: AccessorySetupGenerator.exe.manifest  AccessorySetupGenerator.rc  AccessorySetupGenerator.vcxproj  AccessorySetupGenerator.vcxproj.filters  CMakeLists.txt
cmake/Modules/: FindBTstack.cmake  Findlibnfc.cmake  Findqrencode.cmake
