# HomeKit ADK Tools

# AccessorySetupGenerator - Generate setup codes and payloads
add_subdirectory(AccessorySetupGenerator)

# Shell scripts are not built, but we provide PowerShell equivalents in Scripts/
message(STATUS "Tools configured: AccessorySetupGenerator")
message(STATUS "PowerShell scripts available in: Scripts/")
